--- a/resume.org
+++ b/resume.org
@@ -46,6 +46,8 @@
         ("defaultsans" "lato" t)
         ("" "paracol" t)
         ))
+(require 'ox-extra)
+(ox-extras-activate '(latex-header-blocks ignore-headlines))
 #+END_SRC
 #+LATEX_CLASS: altacv
 #+LATEX_HEADER: \columnratio{0.6} % Set the left/right column width ratio to 6:4.
@@ -53,15 +55,15 @@
 *** Bibliography
 # #+LATEX_HEADER: \DeclareNameAlias{sortname}{last-first}
 #+LATEX_HEADER: \DeclareNameAlias{sortname}{given-family}
-#+LATEX_HEADER: \addbibresource{aidan.bib}
+#+LATEX_HEADER: \addbibresource{resume.bib}
 # #+LATEX_HEADER: \usepackage[citestyle=numeric-comp, maxcitenames=1, maxbibnames=4, doi=false, isbn=false, eprint=true, backend=bibtex, hyperref=true, url=false, natbib=true]{biblatex}
 # #+LATEX_HEADER: \usepackage[backend=biber, sorting=nyvt, style=authoryear, firstinits]{biblatex}
 # #+LATEX_HEADER: \usepackage[backend=natbib, giveninits=true]{biblatex}
 #+LATEX_HEADER: \usepackage[style=trad-abbrv,sorting=none,sortcites=true,doi=false,url=false,giveninits=true,hyperref]{biblatex}
 
 ** Exporter Settings
-#+AUTHOR: Aidan Scannell
-#+EXPORT_FILE_NAME: ./curriculum-vitae.pdf
+#+AUTHOR: Harrison Pielke-Lombardo
+#+EXPORT_FILE_NAME: ./resume.pdf
 #+OPTIONS: toc:nil title:nil H:1
 ** Macros
 #+MACRO: cvevent \cvevent{$1}{$2}{$3}{$4}
@@ -73,22 +75,23 @@
 * CV Header :ignore:
 ** Photo & Tagline :ignore:
 #+begin_export latex
-\name{Aidan Scannell}
-\photoR{2.8cm}{aidan_portrait.jpeg}
+\name{Harrison Pielke-Lombardo}
+\photoR{2.8cm}{Harrison_2015s.jpg}
 \tagline{PhD Researcher}
 #+end_export
 
 ** Personal Info :ignore:
 #+begin_export latex
 \personalinfo{
-  \homepage{www.aidanscannell.com}
-  \email{scannell.aidan@gmail.com}
-  \phone{+44 787 558 3912}
-  \location{Bristol, UK}
-  \github{aidanscannell}
-  \linkedin{aidan-scannell-82522789/}
-  \dob{22 April 1994}
-  \driving{UK Driving Licence}
+ %%  \homepage{www.github.com/tuh8888}
+  \email{harrison.pielke-lombardo@cuanschutz.edu}
+  \phone{720 209 6249}
+  \location{Denver, CO}
+  \github{tuh8888}
+  \linkedin{tuh8888}
+  \dob{12 May 1995}
+%%   \driving{US Driving Licence
+  }
 }
 \makecvheader
 #+end_export
@@ -100,30 +103,26 @@
 ** Personal Statement Secondmind :ignore:noexport:
 #+begin_export latex
  \begin{quote}
- ``I am an aspiring researcher with interests at the intersection of probabilistic machine learning and control theory. I am particularly interested in uncertainty quantification and as a result, a great deal of my work focuses on Bayesian non-parametric methods, specifically Gaussian processes and variational inference.''
+ ``I am a  graduate from the University of Colorado, Anschutz Medical Campus in the prgram for Computational Bioscience. My work has included developing novel algorithms for symbolic AI and natural language processing. I am a polyglot programmer who enjoys turning difficult problems for people into easy solutions for computers.''
  \end{quote}
 #+end_export
 ** Personal Statement Amazon :ignore:
 #+begin_export latex
  \begin{quote}
- ``I am a PhD researcher with interests at the intersection of probabilistic machine learning and control theory. A great deal of my work focuses on Bayesian non-parametric methods, specifically Gaussian processes, variational inference and decision-making under uncertainty.''
+ ``I am a  graduate from the University of Colorado, Anschutz Medical Campus in the prgram for Computational Bioscience. My work has included developing novel algorithms for symbolic AI and natural language processing. I am a polyglot programmer who enjoys turning difficult problems for people into easy solutions for computers.''
  \end{quote}
 #+end_export
 ** Experience
 *** PhD Researcher :ignore:
-{{{cvevent(PhD Researcher, University of Bristol,Sept 2018 -- Ongoing, Bristol\, UK)}}}
+{{{cvevent(PhD Researcher, University of Colorado\, Anschutz Medical Campus, Aug 2016 -- Aug 2022, Denver\, CO)}}}
 
-# Researching methods for probabilistic inference and control in multimodal dynamical systems. EPSRC Centre for Doctoral Training in Future Autonomous and Robotic Systems (FARSCOPE).
-Researching methods for data-efficient learning and control in multimodal dynamical systems. EPSRC Centre for Doctoral Training in Future Autonomous and Robotic Systems (FARSCOPE).
+Schematization of biological mechanisms using network alignment and computational analogy for hypothesizing about disease mechanisms and their interventions.
 
-{{{cvtag(Probabilistic modelling)}}}
-{{{cvtag(Gaussian processes)}}}
-{{{cvtag(Variational inference)}}}
-{{{cvtag(Optimal control)}}}
-{{{cvtag(Trajectory optimisation)}}}
-# {{{cvtag(Model-based reinforcement learning)}}}
+{{{cvtag(Knowledge-bases)}}}
+{{{cvtag(Artificial intelligence)}}}
+{{{cvtag(Biomedical datascience)}}}
 
-*** Teaching Assistant :ignore:
+*** Teaching Assistant :ignore:noexport:
 {{{par-div}}}
 {{{cvevent(Teaching Assistant, University of Bristol,Sept 2018 -- Ongoing, Bristol\, UK)}}}
 
@@ -138,33 +137,7 @@ Alongside my PhD I have assisted teaching:
 {{{cvtag(Active listening)}}}
 {{{cvtag(Teaching)}}}
 
-*** Mott MacDonald :ignore:noexport:
-{{{par-div}}}
-
-{{{cvevent(Mechanical Engineer Intern,Mott MacDonald,June 2015 -- August 2015, London\, UK)}}}
-
-# I worked as a mechanical engineer within the building services division where I developed my
-# teamwork skills and learned the importance of knowledge management.
-# I was in charge of optimising the heating, ventilation and air-conditioning of a building a
-# Hackney Wick underground station.
-# I met with external architects to communicate our ideas and I personally overcame logistical issues
-# and improved a systems efficiency, resulting in the designs approval.
-# I consistently met deadlines whilst working under pressure and was offered future employment.
-# This internship strengthened my desire to move away from engineering and pursue a research driven
-# career involving mathematics and programming.
-
-- Developed teamwork skills, learning the importance of knowledge management within a team.
-- Overcame logistical issues and improved a system’s efficiency, resulting in the design’s approval.
-- Consistently met deadlines whilst working under pressure.
-- Conducted a feasibility study and estimated project costs that informed subsequent action.
-- Located an error and proposed a solution. Communicating this to relevant managers resulted in its successful implementation.
-- Mott MacDonald offered me future employment following my summer placement.
-  
-{{{cvtag(Engineering)}}}
-{{{cvtag(Teamwork)}}}
-{{{cvtag(Industry)}}}
-
-** Publications
+** TODO Publications
 #+begin_export latex
 \nocite{*}
 % \printbibliography[heading=pubtype,title={\printinfo{\faBook}{Books}},type=book]
@@ -175,31 +148,46 @@ Alongside my PhD I have assisted teaching:
 #+end_export
 
 ** Projects
-*** Active Learning Secondmind :ignore:noexport:
+*** Knowtator :ignore:
 
 # {{{cvevent(Investigating Exploration-Exploitation in Multimodal Dynamical Systems (Academic), University of Bristol, May 2021 - Ongoing, Bristol\, UK)}}}
-{{{cvevent(Exploration of Operatable Dynamics Modes in Multimodal Dynamical Systems, University of Bristol, May 2021 - Ongoing, Bristol\, UK)}}}
+{{{cvevent(Knowtator: Concept and relation annotation plugin for Protégé, University of Colorado\, Anschutz Medical Campus, 2017 - Ongoing, Denver\, CO)}}}
 
-- Developing data-efficient techniques for exploration in multimodal dynamical systems.
-- The goal of this project is to explore a single dynamics mode that is known to be operatable whilst avoiding other modes.
-  # unoperatable capable of remaining in a single dynamics mode during exploration.
+- User-oriented interactions between structured and unstructured data.
 
-# {{{cvtag(JAX)}}}
-{{{cvtag(Bayesian optimisation)}}}
-{{{cvtag(Gaussian processes)}}}
-{{{cvtag(Optimal control)}}}
+{{{cvtag(Semantic web)}}}
+{{{cvtag(GUI)}}}
 
-*** Active Learning :ignore:
+*** Dep2Rel :ignore:
 
-# {{{cvevent(Investigating Exploration-Exploitation in Multimodal Dynamical Systems (Academic), University of Bristol, May 2021 - Ongoing, Bristol\, UK)}}}
-{{{cvevent(Optimal Control in Multimodal Dynamical Systems as Probabilistic Inference, University of Bristol, May 2021 - Ongoing, Bristol\, UK)}}}
+    \n
 
-- Developing data-efficient techniques for exploration in multimodal dynamical systems.
-- The goal of this project is to explore a single dynamics mode that is known to be operatable whilst avoiding other modes.
+{{{divider}}}
 
-{{{cvtag(Variational inference)}}}
-{{{cvtag(Gaussian processes)}}}
-{{{cvtag(Optimal control)}}}
+{{{cvevent(Bootstrapped relation extraction using word embeddings and dependency paths, University of Colorado\, Anschutz Medical Campus, 2017 - 2019, Denver\, CO)}}}
+
+- Extracting drug-target interactions from full text articles.
+- Creates human-interpretable syntax patterns from dependency paths encoded using word embeddings.
+- Bootstrapped algorithm incorporating GPU accelerated matrix operations for scalability
+
+{{{cvtag(Natural language processing)}}}
+{{{cvtag(Semantic web)}}}
+
+*** LeSS                                                             :ignore:
+
+    \n
+
+{{{divider}}}
+
+    {{{cvevent(Least Subsuming Subgraph algorithm, University of Colorado\, Anschutz Medical Campus, 2019-2022, Denver\, CO)}}}
+
+    - Compare knowledge graphs using structural, semantic, and causal properties.
+    - Extends analogical reasoning to allow for comparison and generalization.
+    - Can be used for hypothesis generation, cross-disciplinary knowledge transfer, and contextualization of scientific findings
+
+      {{{cvtag(Artificial intelligence)}}}
+      {{{cvtag(Knowledge graphs)}}}
+      {{{cvtag(Analogical reasoning)}}}
 
 ** Newpage :ignore:
 {{{new-page}}}
@@ -273,7 +261,7 @@ Alongside my PhD I have assisted teaching:
 ** Newpage :ignore:noexport:
 {{{new-page}}}
 
-** Volunteering
+** Volunteering                                                    :noexport:
 *** FARSCOPE Course Rep :ignore:
 {{{cvevent(Cohort Representative, FARSCOPE CDT, Sept 2018 - Ongoing, Bristol\, UK)}}}
 # - I represent myself and fellow CDT students in management meetings where I communicate ideas and information between students and management.
@@ -329,76 +317,72 @@ Each year, as part of Formula Student, students design, build and race a single 
 {{{cvtag(Leadership)}}}
 {{{cvtag(Time Management)}}}
 
-** Invited Talks
-*** Geometry Talk :ignore:
-{{{cvevent(Synergising Bayesian Inference and Probabilistic Geometries for Robotic Control, Cognitive Systems - Technical University of Denmark (DTU), 18 March 2021, Zoom)}}}
-# - Presented a method for controlling multimodal dynamical systems synergising Bayesian inference and probabilistic geometries.
-- Presented a method synergising Bayesian inference and probabilistic geometries to control multimodal dynamical systems.
-
-{{{cvtag(Communication)}}}
-{{{cvtag(Probabilistic geometries)}}}
-{{{cvtag(Gaussian processes)}}}
-
-* CV Column 2 :ignore:
+* CV Column 2                                                        :ignore:
 # Switch to the right column - will automatically move to the next page.
 #+begin_export latex
 \switchcolumn
 #+end_export
 
 ** Skills
+{{{cvtag(Clojure(script))}}}
+{{{cvtag(Reagent)}}}
+{{{cvtag(Re-frame)}}}
+{{{cvtag(Rum)}}}
+{{{cvtag(Datascript/Datomic)}}}
+
+{{{divider}}}
+
 {{{cvtag(Python)}}}
-{{{cvtag(TensorFlow)}}}
-{{{cvtag(GPflow)}}}
-{{{cvtag(JAX)}}}
 {{{cvtag(NumPy)}}}
-{{{cvtag(SciPy)}}}
+{{{cvtag(Pandas)}}}
+{{{cvtag(SciKitLearn)}}}
+
+{{{divider}}}
+
 {{{cvtag(Matplotlib)}}}
-{{{cvtag(GPy)}}}
+{{{cvtag(Vega/VegaLite)}}}
+{{{cvtag(GraphViz)}}}
+{{{cvtag(Jupyter(Lab))}}}
 
 {{{divider}}}
 
 {{{cvtag(Java)}}}
+{{{cvtag(HTML/CSS)}}}
+{{{cvtag(Common Lisp)}}}
+{{{cvtag(Bash)}}}
 {{{cvtag(C++)}}}
+{{{cvtag(R)}}}
 {{{cvtag(MATLAB)}}}
-{{{cvtag(ROS)}}}
 
 {{{divider}}}
 
-
+{{{cvtag(Linux)}}}
 {{{cvtag(Git/GitHub)}}}
 {{{cvtag(LaTeX)}}}
 {{{cvtag(Org-mode)}}}
 
+{{{divider}}}
+
+{{{cvtag(Natural Language Processing)}}}
+{{{cvtag(Artificial intelligence)}}}
+{{{cvtag(Machine Learning)}}}
+{{{cvtag(Semantic web)}}}
+
 ** Education
-{{{cvevent(PhD\ in Bayesian Machine Learning for Robotic Control, University of Bristol, Sept 2018 - Ongoing,)}}}
-- \faBook Probabilistic Inference for Learning and Control in Multimodal Dynamical Systems
+{{{cvevent(PhD program in Computational Biosciences, University of Colorado\, Anschutz Medical Campus, Aug 2016 - Aug 2022,)}}}
 
 {{{divider}}}
 
-{{{cvevent(Gaussian Process and Uncertainty Quantification Summer School (GPSS), University of Sheffield, Sept 2019 - Sept 2019,)}}}
-
-{{{divider}}}
-
-{{{cvevent(Machine Learning Summer School Moscow (MLSS), Skoltech, Aug 2019 - Sept 2019,)}}}
-
-{{{divider}}}
-
-# {{{cvevent(M.Res.\ in Robotics \& Autonomous Systems, University of Bristol | First Class Honours, Sept 2017 -- Sept 2018,)}}}
-# {{{cvevent(a \footnote{Not official - will be awarded if Ph.D. is not completed.} M.Res.\ in Robotics \& Autonomous Systems,University of Bristol,Sept 2017 -- Sept 2018,)}}}
 #+BEGIN_EXPORT latex
-\cvevent{\footnote{Awarded if PhD is not completed.} MRes in Robotics \& Autonomous Systems}{University of Bristol | First Class Honours}{Sept 2017 -- Sept 2018}{}
+\cvevent{\footnote{Awarded if PhD is not completed.} MS in Biomedical Sciences}{University of Colorado\, Anschutz Medical Campus}{Aug 2016 -- Aug 2022}{}
 #+END_EXPORT
-# - First Class Honours
-- \faBook [[https://www.aidanscannell.com/project/uncertain-agentspeak/][Extending BDI Agents to Model and Reason with Uncertainty]]
-
 
 {{{divider}}}
 
-{{{cvevent(MEng in Mechanical Engineering, University of Bristol | First Class Honours, Sept 2012 -- June 2016,)}}}
+{{{cvevent(BS in Applied Mathematics, University of Colorado, Aug 2013 -- May 2016,)}}}
 # - First Class Honours \\
-- Graduated in top 10% of cohort
 
-** Newpage :ignore:
+** Newpage :ignore:noexport:
 #+BEGIN_EXPORT latex
 \newpage
 #+END_EXPORT
@@ -410,22 +394,7 @@ Each year, as part of Formula Student, students design, build and race a single 
 % \end{quote}
 #+end_export
 
-# ** Most Proud Of :ignore:
-# #+begin_export latex
-# \cvsection{Most Proud of}
-# #+end_export
-
-# #+begin_export latex
-# \cvachievement{\faTrophy}{Code Club Leader}{Collaborated with Code Club and Bristol Libraries to set up and run a Code Club for 9-13 year olds.}
-# #+end_export
-
-# #+begin_export latex
-# \divider
-
-# \cvachievement{\faHeartbeat}{British University Snowboard Slalom Champion}{Won all national British university slalom competitions in 2017-2018.}
-# #+end_export
-
-** Achievements 
+** Achievements :noexport:
 {{{cvachievement(\faTrophy, Full Sporting Colours, Awarded full colours for outstanding achievements in snowboarding. Multiple gold medals in British University Snowboard Championships.)}}}
 
 {{{divider}}}
@@ -466,18 +435,19 @@ Each year, as part of Formula Student, students design, build and race a single 
 ** References
 #+begin_export latex
 % \cvref{name}{email}{mailing address}
-\cvref{Prof.\ Arthur Richards}{University of Bristol}{arthur.richards@bristol.ac.uk}
-% {Address Line 1\\Address line 2}
-\divider
-\cvref{Dr.\ Carl Henrik Ek}{University of Cambridge}{che29@cam.ac.uk}
+\cvref{Dr.\ Lawrence Hunter}{University of Colorado}{lawrence.hunter@cuanschutz.edu}
 % {Address Line 1\\Address line 2}
 #+end_export
+- Thesis advisor
+{{{divider}}}
+#+begin_export latex
+\cvref{Dr.\ James Costello}{University of Colorado}{james.costello@cuanschutz.edu}
+% {Address Line 1\\Address line 2}
+#+end_export
+- Committee chair
 
 * Back Matter :ignore:
 #+begin_export latex
 \end{paracol}
 \end{document}
 #+end_export
-
-
-
